remove the add method without indetifi

--- a/app/views/ai_product_sorts/index.html.erb
+++ b/app/views/ai_product_sorts/index.html.erb
@@ -11,4 +11,4 @@
   <% end %>
 </div>
 
-<%= link_to "New ai product sort", new_ai_product_sort_path %>
+<!-- <%= link_to "New ai product sort", new_ai_product_sort_path %> -->
