--- a/app/views/ai_products/index.html.erb
+++ b/app/views/ai_products/index.html.erb
@@ -62,18 +62,9 @@
                       <div class="w-100">
                         <a href="<%= ai_product_url(p) %>">
                           <label class="btn btn-sm btn-outline-success d-block" >
-                            <i class="fa-solid fa-thumbs-up me-1"></i> 查看详情
+                            <i class="fa-sharp fa-solid fa-bars"></i> 查看详情
                           </label>
                         </a>
-                      </div>
-                      <div class="dropdown ms-3">
-                        <a href="#" class="btn btn-sm btn-primary-soft" id="eventActionShare" data-bs-toggle="dropdown" >
-                          <i class="bi bi-info-lg"></i>
-                        </a>
-                        <!-- Dropdown menu -->
-                        <ul class="dropdown-menu dropdown-menu-end">
-                          <li style="padding: 16px"> <%= p.des  %> </li>
-                        </ul>
                       </div>
                     </div>
                   </div>
