--- a/app/views/ai_products/show.html.erb
+++ b/app/views/ai_products/show.html.erb
@@ -60,7 +60,7 @@
                           <!-- Card body START -->
                           <div class="card-body">
                             <!-- Info -->
-                            <a class="text-body" href="<%= ai_production_url(p) %>"><%= p.name %></a>
+                            <a class="text-body" href="<%= ai_product_url(p) %>"><%= p.name %></a>
                           </div>
                           <!-- Card body END -->
 
