--- a/app/views/ai_products/show.html.erb
+++ b/app/views/ai_products/show.html.erb
@@ -56,7 +56,7 @@
                       <div class="col-sm-6 col-lg-4">
                         <div class="card h-100">
                           <!-- Card header END -->
-                          <img class="card-img-top" src="<%= "https://xcoze-1304952191.cos.ap-guangzhou.myqcloud.com/#{@ai_product.cover}?imageMogr2/thumbnail/1300x732/crop/1300x732/gravity/center/format/webp/interlace/1/quality/100" %>" alt="Post">
+                          <img class="card-img-top" src="<%= "https://xcoze-1304952191.cos.ap-guangzhou.myqcloud.com/#{p.cover}?imageMogr2/thumbnail/1300x732/crop/1300x732/gravity/center/format/webp/interlace/1/quality/100" %>" alt="Post">
                           <!-- Card body START -->
                           <div class="card-body">
                             <!-- Info -->
