--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -16908,3 +16908,19 @@ html[data-theme=dark] .light-mode-item {
   transition: opacity 0.35s, transform 0.35s;
   transform: translate3d(-40px, 0, 0);
 }
+.page-content{
+  color: #1f2329;
+  margin: auto;
+  line-height: 1.5rem;
+  letter-spacing: 0.02rem;
+  font-size: 1rem;
+}
+
+.page-content li{
+  color: #1f2329;
+  margin: auto;
+  line-height: 1.5rem;
+  letter-spacing: 0.02rem;
+  font-size: 1rem;
+  margin-top: 1.6rem;
+}
