--- a/app/views/ai_products/show.html.erb
+++ b/app/views/ai_products/show.html.erb
@@ -1,4 +1,5 @@
-<main>
+<%= content_for :title, @ai_product.name + '人工智能|AIGC|xcoze'%>
+<%= content_for :description, @ai_product.des %>
 
   <main>
     <!-- Container START -->
@@ -93,4 +94,3 @@
   </main>
 
 
-</main>
