--- a/app/views/ai_products/index.html.erb
+++ b/app/views/ai_products/index.html.erb
@@ -1,3 +1,6 @@
+<%= content_for :title, '人工智能|AIGC|人工智能导航|人工智能分享社区|AI软件|AI创作工具|chatgpt入口|人工智能|AI技术平台|AI写作工具|AI绘画网站 --xcoze'%>
+<%= content_for :keywords, "AIGC、AIGC工具、AI软件、chatgpt、文心一言、人工智能、AI技术、人工智能技术、AI导航、Ai工具网站、Ai工具、Ai工具箱、AI网站、AI写作工具、AI智能工具、AI图片工具、AI语音生成器、AI视频工具、AI营销" %>
+<%= content_for :description, "XCOZE是一个集国内外优秀的AI人工智能技术导航网站，为用户收集AI软件,chatgpt,文心一言,人工智能,AI技术,AI创作工具,人工智能技术,AI导航,Ai工具网站,Ai工具,Ai工具箱,AI网站,AI写作工具,AI智能工具,AI图片工具,AI语音生成器,AI视频工具,AI营销等优秀的AI功能网站,同时也环境大家在这里进行优化的交流，show出你的midjourney，stable diffusion等AI作品，交流魔法咒语与创作心得。" %>
 <p style="color: green"><%= notice %></p>
 
 
