--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,17 +3,129 @@
   <head>
     <title><%= yield :title %></title>
     <meta name="description" content="<%= yield :description %>">
+    <meta name="keywords" content="<%= yield :keywords %>">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    <script>LA.init({id:"K2e8vbElQptG1dcX",ck:"K2e8vbElQptG1dcX",autoTrack:true})</script>
   </head>
 
   <body>
    <p class="notice"><%= notice %></p>
    <p class="alert"><%= alert %></p>
+   <!-- =======================
+Header START -->
+   <header class="navbar-light fixed-top header-static bg-mode">
+
+     <!-- Logo Nav START -->
+     <nav class="navbar navbar-expand-lg">
+       <div class="container">
+         <!-- Logo START -->
+         <a class="navbar-brand" href="<%= root_path %>">
+           <img class="light-mode-item navbar-brand-item" src="<%= asset_path('xcoze-logo.png') %>" alt="logo">
+           <img class="dark-mode-item navbar-brand-item" src="<%= asset_path('xcoze-logo.png') %>" alt="logo">
+         </a>
+         <!-- Logo END -->
+
+
+         <!-- Main navbar START -->
+         <div class="collapse navbar-collapse" id="navbarCollapse">
+
+
+         </div>
+         <!-- Main navbar END -->
+
+         <!-- Nav right START -->
+         <ul class="nav flex-nowrap align-items-center ms-sm-3 list-unstyled">
+           <li class="nav-item ms-2 dropdown">
+             <a class="nav-link btn icon-md p-0" href="#" id="profileDropdown" >
+               <img class="avatar-img rounded-2" src="<%= asset_path('avatar/07.jpg') %>" alt="">
+             </a>
+             <ul class="dropdown-menu dropdown-animation dropdown-menu-end pt-3 small me-md-n3" aria-labelledby="profileDropdown">
+               <!-- Profile info -->
+               <li class="px-3">
+                 <div class="d-flex align-items-center position-relative">
+                   <!-- Avatar -->
+                   <div class="avatar me-3">
+                     <img class="avatar-img rounded-circle" src="assets/images/avatar/07.jpg" alt="avatar">
+                   </div>
+                   <div>
+                     <a class="h6 stretched-link" href="#">Lori Ferguson</a>
+                     <p class="small m-0">Web Developer</p>
+                   </div>
+                 </div>
+                 <a class="dropdown-item btn btn-primary-soft btn-sm my-2 text-center" href="my-profile.html">View profile</a>
+               </li>
+               <!-- Links -->
+               <li><a class="dropdown-item" href="settings.html"><i class="bi bi-gear fa-fw me-2"></i>Settings & Privacy</a></li>
+               <li>
+                 <a class="dropdown-item" href="http://www.bootstrapmb.com" >
+                   <i class="fa-fw bi bi-life-preserver me-2"></i>Support
+                 </a>
+               </li>
+               <li>
+                 <a class="dropdown-item" href="" >
+                   <i class="fa-fw bi bi-card-text me-2"></i>Documentation
+                 </a>
+               </li>
+               <li class="dropdown-divider"></li>
+               <li><a class="dropdown-item bg-danger-soft-hover" href="sign-in-advance.html"><i class="bi bi-power fa-fw me-2"></i>Sign Out</a></li>
+               <li> <hr class="dropdown-divider"></li>
+               <!-- Dark mode switch START -->
+               <li>
+                 <div class="modeswitch-wrap" id="darkModeSwitch">
+                   <div class="modeswitch-item">
+                     <div class="modeswitch-icon"></div>
+                   </div>
+                   <span>Dark mode</span>
+                 </div>
+               </li>
+               <!-- Dark mode switch END -->
+             </ul>
+           </li>
+           <!-- Profile START -->
+
+         </ul>
+         <!-- Nav right END -->
+       </div>
+     </nav>
+     <!-- Logo Nav END -->
+   </header>
+   <!-- =======================
+   Header END -->
     <%= yield %>
+
+
+
+   <footer class="bg-mode py-3">
+     <div class="container">
+       <div class="row">
+         <div class="col-lg-6">
+           <!-- Footer nav START -->
+           <ul class="nav lh-1">
+             <li class="nav-item">
+               <a class="nav-link" href="#">About</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="#">Privacy &amp; terms</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2021022481号-1</a>
+             </li>
+           </ul>
+           <!-- Footer nav START -->
+         </div>
+         <div class="col-lg-6 ">
+           <!-- Copyright START -->
+           <p class="text-end mb-0">©2023 <a class="text-body" href="#">XCOZE </a>All rights reserved.</p>
+           <!-- Copyright END -->
+         </div>
+       </div>
+     </div>
+   </footer>
   </body>
 </html>
