--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,29 +51,24 @@ Header START -->
                  <div class="d-flex align-items-center position-relative">
                    <!-- Avatar -->
                    <div class="avatar me-3">
-                     <img class="avatar-img rounded-circle" src="assets/images/avatar/07.jpg" alt="avatar">
+                     <img class="avatar-img rounded-circle" src="<%= asset_path('avatar/07.jpg') %>" alt="avatar">
                    </div>
                    <div>
                      <a class="h6 stretched-link" href="#">Lori Ferguson</a>
                      <p class="small m-0">Web Developer</p>
                    </div>
                  </div>
-                 <a class="dropdown-item btn btn-primary-soft btn-sm my-2 text-center" href="my-profile.html">View profile</a>
+                 <a class="dropdown-item btn btn-primary-soft btn-sm my-2 text-center" href="$">View profile</a>
                </li>
                <!-- Links -->
-               <li><a class="dropdown-item" href="settings.html"><i class="bi bi-gear fa-fw me-2"></i>Settings & Privacy</a></li>
+               <li><a class="dropdown-item" href="#"><i class="bi bi-gear fa-fw me-2"></i>Settings & Privacy</a></li>
                <li>
-                 <a class="dropdown-item" href="http://www.bootstrapmb.com" >
-                   <i class="fa-fw bi bi-life-preserver me-2"></i>Support
-                 </a>
-               </li>
-               <li>
-                 <a class="dropdown-item" href="" >
+                 <a class="dropdown-item" href="#" >
                    <i class="fa-fw bi bi-card-text me-2"></i>Documentation
                  </a>
                </li>
                <li class="dropdown-divider"></li>
-               <li><a class="dropdown-item bg-danger-soft-hover" href="sign-in-advance.html"><i class="bi bi-power fa-fw me-2"></i>Sign Out</a></li>
+               <li><a class="dropdown-item bg-danger-soft-hover" href="#"><i class="bi bi-power fa-fw me-2"></i>Sign Out</a></li>
                <li> <hr class="dropdown-divider"></li>
                <!-- Dark mode switch START -->
                <li>
