remove tag style from index

--- a/app/views/ai_products/index.html.erb
+++ b/app/views/ai_products/index.html.erb
@@ -60,14 +60,14 @@
                       <!-- Company info -->
                       <p class="mb-0 small"> <i class="bi bi-arrow-return-right pe-1"></i> <%= p.company %> </p>
                       <p class="small"> <i class="bi bi-geo-alt pe-1"></i> <%= p.country %> </p>
-                      <p><small><b>标签： </b></small>
-                        <% if p.ai_product_tags  %>
-                          <% p.ai_product_tags.order("weight DESC").limit(2).each do |tag|%>
-                            <small><%= tag.name %></small>
-                          <% end %>
-                        <% end %>
+<!--                      <p><small><b>标签： </b></small>-->
+                        <%# if p.ai_product_tags  %>
+                          <%# p.ai_product_tags.order("weight DESC").limit(2).each do |tag|%>
+<!--                            <small><%#= tag.name %></small>-->
+                          <%# end %>
+                        <%# end %>
 
-                      </p>
+<!--                      </p>-->
                     </a>
                     <div class="d-flex mt-3 justify-content-between">
                       <!-- Detail button -->
