--- a/app/views/my_contact_cards/new.html.erb
+++ b/app/views/my_contact_cards/new.html.erb
@@ -1,9 +1,30 @@
-<h1>New my contact card</h1>
-
-<%= render "form", my_contact_card: @my_contact_card %>
-
-<br>
-
-<div>
-  <%= link_to "Back to my contact cards", my_contact_cards_path %>
-</div>
+<!-- app/views/your_controller/new.html.erb -->
+<%= form_with(model: @my_contact_card ) do |form| %>
+  <br>
+  <br>
+  <%= form.label :avatar %>
+  <%= form.file_field :avatar %>
+  <br>
+  <br>
+  <%= form.label :title %>
+  <%= form.text_field :title %>
+  <br>
+  <br>
+  <%= form.label :QRcode %>
+  <%= form.file_field :QRcode %>
+  <br>
+  <br>
+  <%= form.label :cdescription %>
+  <%= form.text_area :cdescription %>
+  <br>
+  <br>
+  <%= form.label :ctitle %>
+  <%= form.text_field :ctitle %>
+  <br>
+  <br>
+  <%= form.label :cpic %>
+  <%= form.file_field :cpic %>
+  <br>
+  <br>
+  <%= form.submit '提交' %>
+<% end %>
