--- a/app/views/my_contact_cards/index.html.erb
+++ b/app/views/my_contact_cards/index.html.erb
@@ -17,13 +17,15 @@
 </script>
 <p style="color: green"><%= notice %></p>
 
-<h1>My contact cards</h1>
 
-<div id="my_contact_cards">
-  <p>
-    <strong>Link:</strong>
-  <p id="link"><%= @link %></p>
-  <button id="copyButton">复制链接</button>
-</div>
+<section class=" py-5">
+    <div class="container card card-body col-md-10 ">
+      <p>
+        <strong>Link:</strong>
+      <p id="link"><%= @link %></p>
+      <br>
+      <button id="copyButton">复制链接</button>
+    </div>
+</section>
 
 
