--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,14 @@ Header START -->
        <div class="container">
          <!-- Logo START -->
          <a class="navbar-brand" href="<%= root_path %>">
-           <img class="light-mode-item navbar-brand-item" src="<%= asset_path('xcoze-logo.png') %>" alt="logo">
-           <img class="dark-mode-item navbar-brand-item" src="<%= asset_path('xcoze-logo.png') %>" alt="logo">
+         <% if request.host == 'xcoze.com' %>
+           <p class="text mb-0">XCOZE</p>
+         <% elsif request.host == yatgoods.com%>
+           <p class="text mb-0">YATGOODS </p>
+         <% end %>
+<!--           <img class="light-mode-item navbar-brand-item" src="<%#= asset_path('xcoze-logo.png') %>" alt="logo">-->
+<!--           <img class="dark-mode-item navbar-brand-item" src="<%#= asset_path('xcoze-logo.png') %>" alt="logo">-->
+
          </a>
          <!-- Logo END -->
 
@@ -109,14 +115,23 @@ Header START -->
                <a class="nav-link" href="#">Privacy &amp; terms</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2021022481号-1</a>
+               <% if request.host == 'xcoze.com' %>
+                <a class="nav-link" href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2021022481号-1</a>
+               <% elsif request.host == yatgoods.com%>
+                 <a class="nav-link" href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2021022481号-2</a>
+               <% end %>
+
              </li>
            </ul>
            <!-- Footer nav START -->
          </div>
          <div class="col-lg-6 ">
            <!-- Copyright START -->
-           <p class="text-end mb-0">©2023 <a class="text-body" href="#">XCOZE </a>All rights reserved.</p>
+           <% if request.host == 'xcoze.com' %>
+             <p class="text-end mb-0">©2023 <a class="text-body" href="#">XCOZE </a>All rights reserved.</p>
+           <% elsif request.host == yatgoods.com%>
+             <p class="text-end mb-0">©2023 <a class="text-body" href="#">YATGOODS </a>All rights reserved.</p>
+           <% end %>
            <!-- Copyright END -->
          </div>
        </div>
