--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -126,6 +126,7 @@ Header START -->
            <!-- Footer nav START -->
          </div>
          <div class="col-lg-6 ">
+           <%= request.host %>
            <!-- Copyright START -->
            <% if request.host == 'xcoze.com' %>
              <p class="text-end mb-0">©2023 <a class="text-body" href="#">XCOZE </a>All rights reserved.</p>
