--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,9 @@ Header START -->
        <div class="container">
          <!-- Logo START -->
          <a class="navbar-brand" href="<%= root_path %>">
-         <% if request.host == 'xcoze.com' %>
+         <% if request.host == 'www.xcoze.com' %>
            <p class="text mb-0">XCOZE</p>
-         <% elsif request.host == 'yatgoods.com' %>
+         <% elsif request.host == 'www.yatgoods.com' %>
            <p class="text mb-0">YATGOODS </p>
          <% end %>
 <!--           <img class="light-mode-item navbar-brand-item" src="<%#= asset_path('xcoze-logo.png') %>" alt="logo">-->
@@ -115,9 +115,9 @@ Header START -->
                <a class="nav-link" href="#">Privacy &amp; terms</a>
              </li>
              <li class="nav-item">
-               <% if request.host == 'xcoze.com' %>
+               <% if request.host == 'www.xcoze.com' %>
                 <a class="nav-link" href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2021022481号-1</a>
-               <% elsif request.host == 'yatgoods.com' %>
+               <% elsif request.host == 'www.yatgoods.com' %>
                  <a class="nav-link" href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2021022481号-2</a>
                <% end %>
 
@@ -128,9 +128,9 @@ Header START -->
          <div class="col-lg-6 ">
            <%= request.host %>
            <!-- Copyright START -->
-           <% if request.host == 'xcoze.com' %>
+           <% if request.host == 'www.xcoze.com' %>
              <p class="text-end mb-0">©2023 <a class="text-body" href="#">XCOZE </a>All rights reserved.</p>
-           <% elsif request.host == 'yatgoods.com' %>
+           <% elsif request.host == 'www.yatgoods.com' %>
              <p class="text-end mb-0">©2023 <a class="text-body" href="#">YATGOODS </a>All rights reserved.</p>
            <% end %>
            <!-- Copyright END -->
